--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,7 +2,7 @@
 #region Base Plugin
 agp = "8.10.1" # Ref : https://developer.android.com/build/releases/past-releases
 kotlin = "2.0.20"
-kotlinx-coroutines = "1.9.0"
+kotlinx-coroutines = "1.10.2"
 ksp = "2.0.20-1.0.25"
 #endregion
 
@@ -28,13 +28,13 @@ jetpack_camera_version = '1.1.0'
 #endregion
 
 #region compose
-androidx-activity-compose = "1.8.2"
+androidx-activity-compose = "1.10.1"
 android-compose-compiler = "1.5.15"#https://developer.android.com/jetpack/androidx/releases/compose-kotlin
 compose-bom = "2025.06.01"# Ref : https://developer.android.com/jetpack/compose/bom
 androidx-compose = "1.8.3"
 androidx-compose-material3 = "1.3.2"
 androidx-compose-material3-adaptive = "1.1.0"
-jetbrains-compose-multiplatform = "1.6.11"
+jetbrains-compose-multiplatform = "1.8.2"
 jetbrains-compose-hot-reload = "1.0.0-alpha10"
 jetbrains-navigation = "2.8.0-alpha13"
 #endregion
@@ -47,13 +47,13 @@ koin-jb-compose= "1.1.2"#next version is 3.6.0!!
 #endregion
 
 #region Json &  Gson & Serialization
-kotlinx-serialization = "1.7.3"
+kotlinx-serialization = "1.8.1"
 #endregion
 
 #region Net
-ktor = "2.3.8"
+ktor = "3.2.1"
 
-ktorfit = "1.12.0"
+ktorfit = "2.5.2"
 retrofit2 = "2.9.0"
 retrofit2_kotlinx_serialization_converter = "1.0.0"
 okhttp = "4.12.0"
@@ -70,32 +70,28 @@ pagingComposeCommon = "3.3.0-alpha02-0.5.1"
 
 #region Image
 coil = "3.0.0-alpha01"
-kamelImage = "0.9.0"
+kamelImage = "1.0.6"
 glide = "4.12.0"
 #endregion
 
-#region I18N and L10N
-lyricist_version = "1.6.2"
-skeptick_libres_version = "1.2.2"
-#endregion
 
 #region Log
 timber = "5.0.1"
-napier_version = "2.6.1"
+napier_version = "2.7.1"
 #endregion
 
 #region DB
 room_version= "2.6.1"
 realm_version= "10.11.1"
 realm_kotlin_version= "3.0.0"#FIXME WTF
-sqldelight_version = '2.0.1'#1.5.5
+sqldelight_version = '2.1.0'#1.5.5
 #endregion
 
-okio = "3.8.0"
-precompose-version="1.5.10"
-moleculeRuntime = "1.3.1"
+okio = "3.15.0"
+precompose-version="1.6.2"
+moleculeRuntime = "2.1.0"
 
-composeView = "1.5.10.3"
+composeView = "1.8.0.1"
 settings = "1.3.0"
 datetime = "0.7.0"
 
@@ -116,7 +112,6 @@ kotlin_serialization = { id = "org.jetbrains.kotlin.plugin.serialization", versi
 kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 jetbrains-compose = { id = "org.jetbrains.compose", version.ref = "jetbrains-compose-multiplatform" }
-i18n_skeptick_libres = { id = "io.github.skeptick.libres", version = "1.2.2" }
 de-ktorfit = { id = "de.jensklingenberg.ktorfit", version.ref = "ktorfit" }
 realm = { id = "io.realm:realm-gradle-plugin", version.ref = "realm_version" }
 realm_kotlin = { id = "io.realm.kotlin", version.ref = "realm_kotlin_version" }
@@ -197,7 +192,7 @@ ktor-ios = { module = "io.ktor:ktor-client-darwin", version.ref = "ktor" }
 ktor-json = { module = "io.ktor:ktor-client-json", version.ref="ktor" }
 ktor-logging = { module = "io.ktor:ktor-client-logging", version.ref="ktor" }
 ktor-js = { module = "io.ktor:ktor-client-js", version.ref = "ktor" }
-ktor-jsonjs = { module = "io.ktor:ktor-client-json-js", version = "3.2.0" }
+ktor-jsonjs = { module = "io.ktor:ktor-client-json-js", version.ref="ktor"}
 ktor-serialization-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref="ktor" }
 ktor-negotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref="ktor" }
 
@@ -248,14 +243,6 @@ image = { module = "media.kamel:kamel-image", version.ref = "kamelImage" }
 imageLoader = { module = "io.github.qdsfdhvh:image-loader", version="1.10.0" }
 glide = { group = "com.github.bumptech.glide", name = "glide", version.ref = "glide" }
 glide-compiler= { group = "com.github.bumptech.glide", name = "compiler", version.ref = "glide" }
-#endregion
-
-#region i18n_String  ##TODO compose 1.6.0 will new support i18n
-lyricist = { module = "cafe.adriel.lyricist:lyricist", version.ref = "lyricist_version" }
-lyricist-processor = { module = "cafe.adriel.lyricist:lyricist-processor", version.ref = "lyricist_version" }
-lyricist-processorXml = { module = "cafe.adriel.lyricist:lyricist-processor-xml", version.ref = "lyricist_version" }
-
-i18n_skeptick_libres = { module = "io.github.skeptick.libres:libres-compose", version.ref  = "skeptick_libres_version" }
 #endregion
 
 #region DB
