--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,6 +4,7 @@ plugins {
     alias(libs.plugins.ksp)
     id "org.jetbrains.kotlin.plugin.serialization"
     id "io.realm.kotlin"
+    id("de.jensklingenberg.ktorfit")
 }
 
 android {
@@ -77,12 +78,6 @@ android {
                 implementation libs.androidx.navigation.fragment.ktx
                 implementation libs.splashscreen
                 implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.2.0-alpha01")
-
-                implementation libs.retrofit2
-
-                implementation libs.retrofit2.converter.kotlinx.serialization
-                implementation libs.okhttp
-                implementation libs.okhttp.interceptor.logging
                 implementation libs.glide
                 ksp libs.glide.ksp
             }
@@ -126,11 +121,16 @@ dependencies {
     implementation libs.koin.core
     implementation libs.koin.android
 
-    implementation libs.retrofit2
+    implementation(libs.ktor.client.cio)
+    implementation(libs.ktor.client.json)
+    implementation(libs.ktor.client.logging)
+    implementation(libs.ktor.client.serialization)
+    implementation(libs.ktor.client.content.negotiation)
+    implementation(libs.ktor.serialization.json)
 
-    implementation libs.retrofit2.converter.kotlinx.serialization
-    implementation libs.okhttp
-    implementation libs.okhttp.interceptor.logging
+    implementation(libs.de.ktorfit)
+    implementation(libs.de.ktorfit.converters.call)
+    implementation(libs.de.ktorfit.converters.flow)
     implementation libs.glide
     ksp libs.glide.ksp
 
