--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -179,22 +179,26 @@ precompose-koin={module="moe.tlaster:precompose-koin",version.ref="precompose-ve
 
 # Ref :https://mvnrepository.com/artifact/de.jensklingenberg.ktorfit?p=2
 de-ktorfit = { module = "de.jensklingenberg.ktorfit:ktorfit-lib", version.ref = "ktorfit" }
-de-ktorfit-light = { module = "de.jensklingenberg.ktorfit:ktorfit-lib-light", version.ref = "ktorfit" }
-de-ktorfit-ksp = { module = "de.jensklingenberg.ktorfit:ktorfit-ksp", version.ref = "ktorfit" }
+de-ktorfit-converters-response = { module = "de.jensklingenberg.ktorfit:ktorfit-converters-response", version.ref = "ktorfit" }
+de-ktorfit-converters-call = { module = "de.jensklingenberg.ktorfit:ktorfit-converters-call", version.ref = "ktorfit" }
+de-ktorfit-converters-flow = { module = "de.jensklingenberg.ktorfit:ktorfit-converters-flow", version.ref = "ktorfit" }
+
 
 okio = { module = "com.squareup.okio:okio", version.ref = "okio" }
 
-ktor-core = {  module = "io.ktor:ktor-client-core", version.ref = "ktor" }
-ktor-jvm = { module = "io.ktor:ktor-client-okhttp-jvm", version.ref = "ktor" }
-ktor-okhttp = { module = "io.ktor:ktor-client-okhttp", version.ref = "ktor" }
-ktor-android = { module = "io.ktor:ktor-client-android", version.ref = "ktor" }
-ktor-ios = { module = "io.ktor:ktor-client-darwin", version.ref = "ktor" }
-ktor-json = { module = "io.ktor:ktor-client-json", version.ref="ktor" }
-ktor-logging = { module = "io.ktor:ktor-client-logging", version.ref="ktor" }
-ktor-js = { module = "io.ktor:ktor-client-js", version.ref = "ktor" }
-ktor-jsonjs = { module = "io.ktor:ktor-client-json-js", version.ref="ktor"}
+ktor-client-core = {  module = "io.ktor:ktor-client-core", version.ref = "ktor" }
+ktor-client-cio = {  module = "io.ktor:ktor-client-cio", version.ref = "ktor" }
+ktor-client-jvm = { module = "io.ktor:ktor-client-okhttp-jvm", version.ref = "ktor" }
+ktor-client-okhttp = { module = "io.ktor:ktor-client-okhttp", version.ref = "ktor" }
+ktor-client-android = { module = "io.ktor:ktor-client-android", version.ref = "ktor" }
+ktor-client-ios = { module = "io.ktor:ktor-client-darwin", version.ref = "ktor" }
+ktor-client-json = { module = "io.ktor:ktor-client-json", version.ref="ktor" }
+ktor-client-logging = { module = "io.ktor:ktor-client-logging", version.ref="ktor" }
+ktor-client-js = { module = "io.ktor:ktor-client-js", version.ref = "ktor" }
+ktor-client-jsonjs = { module = "io.ktor:ktor-client-json-js", version.ref="ktor"}
+ktor-client-serialization = { module = "io.ktor:ktor-client-serialization", version.ref = "ktor" }
+ktor-client-content-negotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref="ktor" }
 ktor-serialization-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref="ktor" }
-ktor-negotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref="ktor" }
 
 ktor-server-core = { module = "io.ktor:ktor-server-core-jvm", version.ref = "ktor" }
 ktor-server-netty = { module = "io.ktor:ktor-server-netty-jvm", version.ref = "ktor" }
