--- a/android/build.gradle
+++ b/android/build.gradle
@@ -113,6 +113,7 @@ dependencies {
     implementation libs.androidx.lifecycle.viewmodel.ktx
 
     implementation libs.androidx.navigation.ui.ktx
+    implementation libs.androidx.navigation.fragment.ktx
     implementation libs.splashscreen
     implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.2.0-alpha01")
 
