--- a/android/build.gradle
+++ b/android/build.gradle
@@ -88,6 +88,8 @@ android {
             dimension "product_code"
             dependencies {
                 implementation(libs.androidx.lifecycle.runtime.ktx)
+                implementation(libs.androidx.lifecycle.runtime.compose)
+
                 implementation(libs.androidx.activity.compose)
                 implementation(platform(libs.androidx.compose.bom))
                 implementation(libs.androidx.compose.ui)
@@ -95,11 +97,12 @@ android {
                 implementation(libs.androidx.compose.ui.tooling.preview)
                 implementation(libs.androidx.compose.foundation)
 
+                implementation(libs.androidx.compose.material)
                 implementation(libs.androidx.compose.material3)
-                implementation(libs.androidx.navigation.compose  )
+                implementation(libs.androidx.navigation.compose)
 
                 implementation(libs.koin.androidx.compose)
-                implementation(libs.koin.androidx.compose.navigation )
+                implementation(libs.koin.androidx.compose.navigation)
                 implementation(libs.koin.compose)
                 implementation(libs.koin.compose.viewmodel)
                 implementation(libs.koin.compose.viewmodel.navigation)
@@ -151,7 +154,7 @@ dependencies {
     implementation libs.splashscreen
     implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.2.0-alpha01")
 
-    implementation  libs.timber
+    implementation libs.timber
 
     implementation libs.koin.core
 
