--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -37,7 +37,8 @@ androidx-compose-material3 = "1.3.2"
 androidx-compose-material3-adaptive = "1.1.0"
 jetbrains-compose-multiplatform = "1.8.2"
 jetbrains-compose-hot-reload = "1.0.0-beta03"
-jetbrains-navigation = "2.8.0-alpha13"
+jetbrains-lifecycle = "2.9.1"
+jetbrains-navigation = "2.9.0-beta03"
 #endregion
 
 #region Third party
@@ -123,10 +124,15 @@ junit = "4.13.2"
 androidx-testExt = "1.2.1"
 test_runner_version = "1.5.2"
 androidx-espresso = "3.6.1"
+kotlinStdlib = "2.0.20"
+runner = "1.6.2"
+core = "1.6.1"
 
 [plugins]
 android_application = { id = "com.android.application", version.ref = "agp" }
 android_library = { id = "com.android.library", version.ref = "agp" }
+#Ref : https://developer.android.com/kotlin/multiplatform/plugin
+android-kotlin-multiplatform-library = { id = "com.android.kotlin.multiplatform.library", version.ref = "agp" }
 kotlin_jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 kotlin_android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin_multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
@@ -146,11 +152,13 @@ vlcSetup = { id = "ir.mahozad.vlc-setup", version.ref = "vlcSetup" }
 realm = { id = "io.realm:realm-gradle-plugin", version.ref = "realm_version" }
 realm_kotlin = { id = "io.realm.kotlin", version.ref = "realm_kotlin_version" }
 
+
 [libraries]
 plugin-source-android = { module = "com.android.tools.build:gradle", version.ref = "agp" }
 plugin-source-kotlin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
 
 #region Base
+kotlin-stdlib = { group = "org.jetbrains.kotlin", name = "kotlin-stdlib", version.ref = "kotlin" }
 kotlinx-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref="kotlinx-coroutines" }
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref="kotlinx-coroutines" }
 kotlinx-coroutines-swing = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-swing", version.ref = "kotlinx-coroutines" }
@@ -237,8 +245,9 @@ androidx-compose-material3-adaptive-navigation = { module = "androidx.compose.ma
 #endregion
 
 #region jetbrains compose
-jetbrains-androidx-lifecycle-viewmodel = { module = "org.jetbrains.androidx.lifecycle:lifecycle-viewmodel", version.ref = "androidx-lifecycle" }
-jetbrains-androidx-lifecycle-runtime-compose = { module = "org.jetbrains.androidx.lifecycle:lifecycle-runtime-compose", version.ref = "androidx-lifecycle" }
+jetbrains-androidx-navigation-compose = { group = "org.jetbrains.androidx.navigation", name = "navigation-compose", version.ref = "jetbrains-navigation" }
+jetbrains-androidx-lifecycle-viewmodel = { module = "org.jetbrains.androidx.lifecycle:lifecycle-viewmodel", version.ref = "jetbrains-lifecycle" }
+jetbrains-androidx-lifecycle-runtime-compose = { module = "org.jetbrains.androidx.lifecycle:lifecycle-runtime-compose", version.ref = "jetbrains-lifecycle" }
 #endregion
 #region compose nav
 precompose = { module = "moe.tlaster:precompose", version.ref = "precompose" }
@@ -404,6 +413,8 @@ kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotl
 kotlin-testJunit = { module = "org.jetbrains.kotlin:kotlin-test-junit", version.ref = "kotlin" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-testExt" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "androidx-espresso" }
+androidx-test-runner = { group = "androidx.test", name = "runner", version.ref = "runner" }
+androidx-test-core = { group = "androidx.test", name = "core", version.ref = "core" }
 androidx-compose-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-compose-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 ktor-server-tests = { module = "io.ktor:ktor-server-tests-jvm", version.ref = "ktor" }
