--- a/build.gradle
+++ b/build.gradle
@@ -49,13 +49,16 @@ buildscript {
 //        classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
 //        classpath "${libs.plugins.realm.get()}"
-        classpath "io.realm.kotlin:gradle-plugin:$realm_kotlin"
+//        classpath "io.realm.kotlin:gradle-plugin:$realm_kotlin"
     }
 }
 
 //Ref : https://stackoverflow.com/questions/37555196/in-gradle-how-to-use-a-variable-for-a-plugin-version
 
 plugins {
+//    alias(libs.plugins.android.application) apply false
+//    alias(libs.plugins.android.library) apply false
+//    alias(libs.plugins.android.kotlin.multiplatform.library) apply false
     id "org.jetbrains.kotlin.jvm" version "${kotlin_version}" apply false
     id 'org.jetbrains.kotlin.android' version "${kotlin_version}" apply false
     alias(libs.plugins.android.kotlin.multiplatform.library) apply false
@@ -68,6 +71,7 @@ plugins {
     alias(libs.plugins.ksp) apply false
     alias(libs.plugins.de.ktorfit)
     //    id 'io.realm.kotlin' version "${realm_kotlin}" apply false
+    alias(libs.plugins.room) apply false
 }
 
 allprojects {
