--- a/legacy_nav/build.gradle
+++ b/legacy_nav/build.gradle
@@ -58,6 +58,12 @@ android {
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
+
+    packaging {
+        resources {
+            excludes += "/META-INF/{AL2.0,LGPL2.1}"
+        }
+    }
 }
 
 dependencies {
@@ -84,10 +90,9 @@ dependencies {
     implementation(libs.koin.core)
     implementation(libs.koin.android)
 
-    implementation(libs.timber)
     implementation(libs.glide)
     ksp(libs.glide.ksp)
-
+    implementation(libs.napier)
     testImplementation libs.junit
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
